# rag-toolkit

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
documentation/: 01-quick-start.md  02-techniques.md  03-configuration.md  04-components-api.md  05-architecture.md  06-project-structure.md
examples/: adaptive_rag.py  basic_rag.py  stock_data_example.py
src/: __init__.py  config.py
src/base/: __init__.py  constructor.py  generator.py  indexer.py  retriever.py  router.py  translator.py
src/generation/: __init__.py  generate.py  validation.py
src/graphs/: __init__.py  adaptive.py  self_rag.py  state.py
src/indexing/: __init__.py  chunking.py  embeddings.py  vectorstore.py
src/models/: __init__.py  document.py  query.py  result.py
src/query/: __init__.py  construction.py  routing.py  translation.py
src/rag_toolkit/: __init__.py  config.py
src/rag_toolkit/base/: __init__.py  constructor.py  generator.py  indexer.py  retriever.py  router.py  translator.py
src/retrieval/: __init__.py  reranking.py  search.py  structured.py
src/techniques/: adaptive.py  self_rag.py  simple.py
src/utils/: __init__.py  aws.py  helpers.py
tests/: conftest.py  test_config.py
tests/test_generation/: test_generate.py  test_validation.py
tests/test_indexing/: test_chunking.py
tests/test_models/: test_document.py  test_query.py  test_result.py
tests/test_query/: test_construction.py  test_routing.py  test_translation.py
tests/test_retrieval/: test_reranking.py  test_search.py  test_structured.py
tests/test_techniques/: test_adaptive.py  test_self_rag.py  test_simple.py
tests/test_utils/: test_helpers.py
(+30 files in other folders)
