[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rag-toolkit"
version = "0.1.0"
description = "A modular RAG (Retrieval-Augmented Generation) toolkit"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}

dependencies = [
    # Core LangChain
    "langchain>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-text-splitters>=0.3.0",

    # LLM Providers
    "langchain-openai>=0.2.0",
    "langchain-anthropic>=0.3.0",

    # Vector stores & embeddings
    "faiss-cpu>=1.7.0",
    "chromadb>=0.5.0",
    "langchain-chroma>=0.2.0",

    # Data models
    "pydantic>=2.0",

    # LangGraph (for adaptive + self-rag workflows)
    "langgraph>=0.2.0",

    # Document loading
    "pypdf>=4.0",

    # Utilities
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
    "mypy>=1.10",
]
semantic = [
    "langchain-experimental>=0.3.0",
]
bm25 = [
    "rank-bm25>=0.2.2",
]
huggingface = [
    "langchain-huggingface>=0.1.0",
    "sentence-transformers>=3.0.0",
]
cohere = [
    "langchain-cohere>=0.3.0",
]
unstructured = [
    "unstructured[pdf]>=0.15.0",
]
markitdown = [
    "markitdown>=0.1.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
